# slang

./: .gitignore  CMakeLists.txt  Cargo.toml
bindings/: CMakeLists.txt
bindings/rust/: CMakeLists.txt  ast.rs  build.rs  ffi.rs  ffi_ext.rs  lib.rs  sourcegen.rs  syntax.rs  tests.rs  token.rs
bindings/rust/ffi/: cxx_sv.rs  wrapper.cc  wrapper.h
bindings/rust/syntax/: cursor.rs  iter.rs
cmake/: merge_static_libs.cmake
include/slang/syntax/: SyntaxNode.h
source/syntax/: SyntaxNode.cpp  SyntaxTree.cpp
